tests/jastadd/negative/type_errors/L2/3_TypeCheckingCaseStmt4.ob
MODULE TestModule;
BEGIN
    CASE 1 < 2 OF
    1:
    END
END TestModule.
